2002-06-20  Benjamin Kosnik  <bkoz@redhat.com>

	* src/ext-inst.cc (__gnu_cxx): Use instead of std:: for extensions.
	Use size_type instead of unsigned long.

2002-06-20  Steve Ellcey  <sje@cup.hp.com>

	* src/ext-inst.cc (_S_fetch): Add explicit templates for char and
	wchar types.
	(_S_min_len): Ditto.

2002-06-20  Benjamin Kosnik  <bkoz@redhat.com>

	* include/Makefile.am: Add rules.
	* include/Makefile.in: Regenerate.

	* acinclude.m4: Define GLIBCPP_C_HEADERS_COMPATIBILITY.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* configure.target (c_model, c_compatibility): Add.
	
	* libsupc++/Makefile.am (c_sources): New.
	(libsupc___la_SOURCES): Add c_sources.
	(LTCOMPILE): Remove INCLUDES.
	(GCC_INCLUDES): New.
	(C_COMPILE): New, like COMPILE but without INCLUDES.
	(cxa_demangle.o): Use C_COMPILE.
	(dyn-string.o): Use C_COMPILE.	
	
	* include/c/std_cstdarg.h: Define __need___va_list.  
	* include/c/std_cstddef.h: Define need_size_t, need_ptrdiff_t,
	need_NULL, need_offsetof.

2002-06-19  Steve Ellcey  <sje@cup.hp.com>

	* configure.in (HAVE_FINITE*, HAVE_ISINF*, HAVE_ISNAN*):  Remove
	definitions in hpux11 cross-build because these functions do
	not exist on hpux11 (but some exist on hpux10); move defaults out
	into existing sections.
	* configure:  Regenerate.

2002-06-18  Benjamin Kosnik  <bkoz@redhat.com>

	* include/c/std_cwchar.h: Guard. Add mbstate_t bits.
	* include/c/std_cwctype.h: Guard.

	* libsupc++/eh_alloc.cc: Tweak include order.
	* libsupc++/pure.cc: Use cstdio.
	* libsupc++/new_op.cc: Remove malloc forward declaration, as
	cstdlib brings it in. Use std::malloc.

	* src/Makefile.am (sources): Remove cmath.cc.
	* src/Makefile.in: Regenerate.
	* src/cmath.cc: Remove.
	
2002-06-18  Phil Edwards  <pme@gcc.gnu.org>

	* configure.target:  Force mips to use the generic cpu routines.

2002-06-18  Phil Edwards  <pme@gcc.gnu.org>

	* configure.host:  Delete file.
	* configure.target:  More documentation.  Factor out common parts of